# ChNU-Practics-2024

./: .env.example  .envrc  .pre-commit-config.yaml  .swp  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  migrate.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-container.yml  testing.yml
config/: settings.py  wsgi.py
docs/: CONTRIBUTING.md
nginx/conf.d/: nginx.conf
src/apps/api/v1/: urls.py
src/apps/auth/: validators.py
src/apps/authentication/: decorators.py  mixins.py  serializers.py  urls.py  utils.py  validators.py  views.py
src/apps/chat/: consumers.py
src/apps/chat/templates/chat/: index.html  room.html
src/apps/startups/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/apps/startups/migrations/: 0001_initial.py  0002_delete_startupfounder.py  0002_remove_startup_startup_founders.py  0003_startup_founders.py  0003_startupfounder_user_alter_startupfounder_id.py  0004_alter_startup_location_alter_startup_size.py  0004_startup_bio.py  0004_startupfounder_startup_id.py  0005_project_startup_projects.py  0006_alter_project_project_name.py  0007_alter_project_description_alter_project_project_name.py  0008_alter_project_media_url.py  0009_alter_project_media_url.py  0010_merge_20240227_1708.py  0011_remove_project_type_project_project_type_and_more.py
src/apps/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_password.py  0003_alter_user_email_alter_user_password_and_more.py  0004_user_groups_user_is_superuser_user_user_permissions.py  0005_user_date_joined_user_is_active_user_is_staff_and_more.py  0006_alter_user_role.py  0007_alter_user_role.py  0008_investor_founder.py  0009_founder_is_active_investor_is_active.py  0010_alter_user_role.py  0011_alter_user_role.py  0012_alter_user_role.py
src/chat/templates/chat/: index.html
src/config/: asgi.py  gunicorn.py  settings.py  urls.py  wsgi.py
src/templates/: startup_profile.html
